--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.13.8",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
